# bazel-third-party-patch-build

./: MODULE.bazel  renovate-config.js  renovate.js
