http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "libheif",
    patch_args = ["-p1"],
    patches = [
        "//:third_party/libheif/libheif.patch",
    ],
    sha256 = "161c042d2102665fcee3ded851c78a0eb5f2d4bfe39fba48ba6e588fd6e964f3",
    strip_prefix = "libheif-1.18.2",
    urls = [
        "https://github.com/strukturag/libheif/releases/download/v1.18.2/libheif-1.18.2.tar.gz",
    ],
)
